feat: Add translation for immunization schedule tile

--- a/packages/esm-patient-immunizations-app/translations/en.json
+++ b/packages/esm-patient-immunizations-app/translations/en.json
@@ -13,6 +13,7 @@
   "immunizations": "Immunizations",
   "Immunizations": "Immunizations",
   "immunizations__lower": "immunizations",
+  "immunizationScheduleTile": "Immunization Schedule Tile",
   "immunizationWorkspaceTitle": "Immunization Form",
   "lotNumber": "Lot Number",
   "manufacturer": "Manufacturer",
