feat: Add translation for immunization history in English

--- a/packages/esm-patient-immunizations-app/translations/en.json
+++ b/packages/esm-patient-immunizations-app/translations/en.json
@@ -10,10 +10,10 @@
   "expirationDate": "Expiration Date",
   "goToSummary": "Go to Summary",
   "immunization": "Immunization",
+  "immunizationHistory": "Immunization History",
   "immunizations": "Immunizations",
   "Immunizations": "Immunizations",
   "immunizations__lower": "immunizations",
-  "immunizationScheduleTile": "Immunization Schedule Tile",
   "immunizationWorkspaceTitle": "Immunization Form",
   "lotNumber": "Lot Number",
   "manufacturer": "Manufacturer",
