feat: Add delete translations for immunization doses and update related messages

--- a/packages/esm-patient-immunizations-app/translations/en.json
+++ b/packages/esm-patient-immunizations-app/translations/en.json
@@ -2,6 +2,7 @@
   "add": "Add",
   "AM": "AM",
   "cancel": "Cancel",
+  "delete": "Delete",
   "doseNumber": "Dose number within series",
   "doseNumberWithinSeries": "Dose number within series",
   "edit": "Edit",
@@ -10,20 +11,24 @@
   "expirationDate": "Expiration Date",
   "goToSummary": "Go to Summary",
   "immunization": "Immunization",
+  "immunizationDeleted": "Immunization Deleted",
+  "immunizationDeletedSuccess": "The immunization dose has been successfully deleted",
+  "immunizationDeleteError": "Failed to delete immunization: ",
   "immunizationHistory": "Immunization History",
   "immunizations": "Immunizations",
   "Immunizations": "Immunizations",
   "immunizations__lower": "immunizations",
   "immunizationWorkspaceTitle": "Immunization Form",
+  "lastDoseOn": "Last Dose on",
   "lotNumber": "Lot Number",
   "manufacturer": "Manufacturer",
+  "noImmunizations": "No immunizations have been recorded for this patient.",
   "pleaseSelect": "Please select",
   "PM": "PM",
   "recentVaccination": "Recent vaccination",
   "save": "Save",
   "seeAll": "See all",
   "sequence": "Sequence",
-  "singleDoseOn": "Single Dose on",
   "time": "Time",
   "timeFormat ": "Time Format",
   "vaccinationDate": "Vaccination date",
