--- a/packages/esm-patient-growth-chart-app/translations/en.json
+++ b/packages/esm-patient-growth-chart-app/translations/en.json
@@ -1,20 +1,24 @@
 {
+  "abnormalValue": "Abnormal value",
   "BiometricsNowAvailable": "Now visible on the Growth Chart",
   "BiometricsRecorded": "Baby Growth Data Saved",
   "BiometricsSaveError": "Error saving growth data",
-  "cancel": "Cancel",
+  "bmi": "BMI",
+  "calculatedBmi": "BMI (calc.)",
   "chartView": "Chart View",
   "checkForValidity": "Some values may be invalid",
   "date": "Date",
   "dateAndTime": "Date and time",
-  "enterLength": "Enter length in cm",
-  "enterMuac": "Enter MUAC in cm (optional)",
-  "enterWeight": "Enter weight in kg",
+  "discard": "Discard",
+  "error": "Error",
   "growthChart": "Growth Chart",
   "length": "Length (cm)",
   "muac": "MUAC (cm)",
   "noResults": "No results found",
-  "submit": "Submit",
+  "pleaseFillField": "Please fill required fields",
+  "recordBiometrics": "Record Biometrics",
+  "saveAndClose": "Save and close",
   "tableView": "Table View",
+  "validationInputError": "Value must be between {{min}} and {{max}}",
   "weight": "Weight (kg)"
 }
