--- a/packages/esm-patient-growth-chart-app/translations/en.json
+++ b/packages/esm-patient-growth-chart-app/translations/en.json
@@ -10,6 +10,7 @@
   "date": "Date",
   "dateAndTime": "Date and time",
   "discard": "Discard",
+  "displaying": "Displaying",
   "error": "Error",
   "growthChart": "Growth Chart",
   "length": "Length (cm)",
