--- a/packages/esm-patient-growth-chart-app/translations/en.json
+++ b/packages/esm-patient-growth-chart-app/translations/en.json
@@ -5,6 +5,7 @@
   "BiometricsSaveError": "Error saving growth data",
   "bmi": "BMI",
   "calculatedBmi": "BMI (calc.)",
+  "cdc": "CDC",
   "chartView": "Chart View",
   "checkForValidity": "Some values may be invalid",
   "date": "Date",
@@ -13,6 +14,7 @@
   "displaying": "Displaying",
   "error": "Error",
   "growthChart": "Growth Chart",
+  "growthStandard": "Growth Standard",
   "length": "Length (cm)",
   "muac": "MUAC (cm)",
   "noResults": "No results found",
@@ -21,5 +23,6 @@
   "saveAndClose": "Save and close",
   "tableView": "Table View",
   "validationInputError": "Value must be between {{min}} and {{max}}",
-  "weight": "Weight (kg)"
+  "weight": "Weight (kg)",
+  "who": "WHO"
 }
