feat: Add delete confirmation messages for immunization doses in translations

--- a/packages/esm-patient-immunizations-app/translations/en.json
+++ b/packages/esm-patient-immunizations-app/translations/en.json
@@ -11,6 +11,8 @@
   "expirationDate": "Expiration Date",
   "goToSummary": "Go to Summary",
   "immunization": "Immunization",
+  "immunizationDelete": "Delete Immunization",
+  "immunizationDeleteConfirm": "Are you sure you want to delete this {{doseNumber}} dose of {{vaccineName}}?",
   "immunizationDeleted": "Immunization Deleted",
   "immunizationDeletedSuccess": "The immunization dose has been successfully deleted",
   "immunizationDeleteError": "Failed to delete immunization: ",
@@ -31,6 +33,7 @@
   "sequence": "Sequence",
   "time": "Time",
   "timeFormat ": "Time Format",
+  "unknownVaccine": "Unknown vaccine",
   "vaccinationDate": "Vaccination date",
   "vaccinationDateRequired": "Vaccination date required",
   "vaccinationSaved": "Vaccination saved successfully",
